--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-num2words==0.5.10
-pandas==1.3.0
-dyNET==2.1.2
+scipy==1.7.0
+tensorflow==2.6.0
+numpy==1.19.5
+pandas==1.3.1
 tornado==6.1
-pymongo==3.11.4
-numpy==1.21.0
-regex==2021.7.6
+dynet==2.1.2
+nltk==3.6.2
+num2words==0.5.10
+pymongo==3.12.0
+regex==2021.8.28
