--- a/pp/requirements.txt
+++ b/pp/requirements.txt
@@ -1,11 +1,8 @@
-pymongo == 3.12.0
-dyNET == 2.1.2
-nltk == 3.6.2
-num2words == 0.5.10
-numpy == 1.19.5
-pandas == 1.3.2
-regex == 2021.8.28
-scipy == 1.7.1
-tensorflow == 2.6.0
-tornado == 6.1
-typing == 3.10.0.0
+scipy==1.7.1
+pandas==1.3.2
+numpy==1.19.5
+num2words==0.5.10
+regex==2021.8.28
+tensorflow==2.4.1
+nltk==3.6.2
+python_Levenshtein==0.12.2
