--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include README.md
+recursive-include resources *
 recursive-include TTS *.md
 recursive-include TTS *.py
 recursive-include TTS *.pickle
