updates regarding setup, and cli

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,16 +8,13 @@ license = Apache License 2.0
 classifiers = Development Status :: 3 - Alpha
 
 [options]
-packages = find:
 include_package_data = True
+packages = find:
 install_requires =
+	numpy==1.19.5
 	regex==2021.8.28
-	tensorflow>2.3.0
+	tensorflow==2.4.1
 	cyhunspell==2.0.2
-
-[options.package_data]
-* = _resources, resources, *.txt, *.hdf5, *.md, *.pickle
-
 
 [options.entry_points]
 console_scripts = vnlp=vnlp.bin.vnlp:main
