updates to setup files

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,9 +11,9 @@ classifiers = Development Status :: 3 - Alpha
 include_package_data = True
 packages = find:
 install_requires =
-	numpy==1.19.5
+	tensorflow<2.6.0; python_version < "3.8"
+	tensorflow>=2.6.0; python_version >= "3.8"
 	regex==2021.8.28
-	tensorflow==2.4.1
 	cyhunspell==2.0.2
 
 [options.entry_points]
