--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ install_requires =
 	tensorflow<2.6.0; python_version < "3.8"
 	tensorflow>=2.6.0; python_version >= "3.8"
 	regex==2021.8.28
-	cyhunspell==2.0.2
+	cyhunspell
 
 [options.entry_points]
 console_scripts = vnlp=vnlp.bin.vnlp:main
