extra dependencies gensim spacy for setup.py and setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,9 @@ install_requires =
 	tensorflow>=2.6.0; python_version >= "3.8"
 	regex==2021.8.28
 	cyhunspell
+	
+[options.extras_require]
+extras = gensim; spacy
 
 [options.entry_points]
 console_scripts = vnlp=vnlp.bin.vnlp:main
