--- a/setup.cfg
+++ b/setup.cfg
@@ -1,23 +1,3 @@
 [metadata]
-name = vnlp
-version = 0.1
-description= NLP Tools for Turkish Language.
-author = Meliksah Turker
-author_email = turkermeliksah@hotmail.com
-license = Apache License 2.0
-classifiers = Development Status :: 3 - Alpha
-
-[options]
-include_package_data = True
-packages = find:
-install_requires =
-	tensorflow<2.6.0; python_version < "3.8"
-	tensorflow>=2.6.0; python_version >= "3.8"
-	regex==2021.8.28
-	cyhunspell
-	
-[options.extras_require]
-extras = gensim; spacy
-
-[options.entry_points]
-console_scripts = vnlp=vnlp.bin.vnlp:main
+description-file=README.md
+license_files=LICENSE
