--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,8 +3,7 @@ include LICENSE
 recursive-include vnlp *.md
 recursive-include vnlp *.py
 recursive-include vnlp *.pickle
-recursive-include vnlp *.hdf5
 recursive-include vnlp *.txt
 recursive-include vnlp *.aff
 recursive-include vnlp *.dic
-recursive-include vnlp *.matrix
+recursive-include vnlp *.model
