--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,7 +5,15 @@
 # Required
 version: 2
 
+# Build documentation in the docs/ directory with Sphinx
+sphinx:
+  builder: html
+  configuration: docs/source/conf.py
+
 python:
    version: 3.8
    install:
-   - requirements: docs/requirements.txt
+    - requirements: docs/requirements.txt
+   
+    - method: pip
+      path: package
