--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,13 +5,22 @@
 # Required
 version: 2
 
+# Set the version of Python and other tools you might need
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.9"
+    # You can also specify other tool versions:
+    # nodejs: "19"
+    # rust: "1.64"
+    # golang: "1.19"
+
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
   builder: html
   configuration: docs/source/conf.py
 
 python:
-   version: 3.9
    install:
     - requirements: docs/requirements.txt
    
