json files are included, pickles are excldued

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,7 +2,7 @@ include README.md
 include LICENSE
 recursive-include vnlp *.md
 recursive-include vnlp *.py
-recursive-include vnlp *.pickle
+recursive-include vnlp *.json
 recursive-include vnlp *.txt
 recursive-include vnlp *.aff
 recursive-include vnlp *.dic
