--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,8 @@ repos:
 #     hooks:
 #     - id: flake8
 -   repo: https://github.com/psf/black
+    description: "Black formatter to has a consistent formatting."
     rev: 23.1.0
+    types_or: [python, pyi, jupyter]
     hooks:
-    - id: black
+    - id: black-jupyter
