--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@ repos:
     hooks:
     - id: black-jupyter
 -   repo: https://github.com/PyCQA/flake8
+    description: "Flake8 checket for styling rules."
     rev: 5.0.4
     hooks:
     - id: flake8
