--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ __pycache__/
 vnlp/resources/spell_correction_model.bin
 vnlp/resources/spell_correction_model.bin.spell
 
+# Model weights that will be downloaded from AWS
+.weights
+
 # C extensions
 *.so
 
