--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
           sudo apt update
           sudo apt -y install swig3.0
           python -m pip install --upgrade pip setuptools wheel pytest
-          pip install '.[extras,develop]'
+          pip install .
       - name: Test with pytest
         run: |
           pytest
